--- a/inclure/head.html
+++ b/inclure/head.html
@@ -32,7 +32,7 @@ var error_on_ajaxform='<:erreur_technique_ajaxform|html2unicode|addslashes|unico
 [(#REM) Balise permettant aux plugins d'inserer des fichiers CSS ]
 #INSERT_HEAD_CSS
 
-[<link rel="stylesheet" href="(#CSS{css/spipr_dist.css})" type="text/css" />]
+[<link rel="stylesheet" href="(#CSS{css/bootstrap3_dist.css})" type="text/css" />]
 
 
 [(#REM) Feuille de style du theme]
