--- a/body.html
+++ b/body.html
@@ -9,11 +9,11 @@
 			</div>]
 
 			<div class="row">
-				<div class="content col-xs-9" id="content">
+				<div class="content col-sm-9" id="content">
 					<INCLURE{fond=breadcrumb/#ENV{type-page},env} />
 					<INCLURE{fond=content/#ENV{type-page},env} />
 				</div>
-				<div class="aside secondary col col-xs-3 offset1" id="aside">
+				<div class="aside secondary col col-sm-3 offset1" id="aside">
 					<INCLURE{fond=aside/#ENV{type-page},env} />
 					<INCLURE{fond=extra/#ENV{type-page},env} />
 				</div>
