col pas nécessaire

--- a/body.html
+++ b/body.html
@@ -13,7 +13,7 @@
 					<INCLURE{fond=breadcrumb/#ENV{type-page},env} />
 					<INCLURE{fond=content/#ENV{type-page},env} />
 				</div>
-				<div class="aside secondary col col-sm-3 offset1" id="aside">
+				<div class="aside secondary col-sm-3 offset1" id="aside">
 					<INCLURE{fond=aside/#ENV{type-page},env} />
 					<INCLURE{fond=extra/#ENV{type-page},env} />
 				</div>
