--- a/inclure/head.html
+++ b/inclure/head.html
@@ -66,7 +66,7 @@ var error_on_ajaxform='<:erreur_technique_ajaxform|html2unicode|addslashes|unico
 #INSERT_HEAD_CSS
 
 [<link rel="stylesheet" href="(#CSS{css/bootstrap3_dist.css})" type="text/css" />]
-
+[<link rel="stylesheet" href="(#CSS{css/jango_custom.css})" type="text/css" />]
 
 [(#REM) Feuille de style du theme]
 [<link rel="stylesheet" href="(#CSS{css/theme.css})" type="text/css" />]
