--- a/inclure/nav.html
+++ b/inclure/nav.html
@@ -24,13 +24,38 @@
 			</button>
 		</div>
 		<!-- END: BRAND -->
-	<div class="c-quick-search">
-		#FORMULAIRE_RECHERCHE
-	</div>
-#SET{menu,#CONFIG{wsps_html5/menu_barre_nav}}
-[(#GET{menu}|oui)
-	<INCLURE{fond=barre_nav/#GET{menu},env}/>
-	]
+		<div class="c-quick-search">
+			#FORMULAIRE_RECHERCHE
 		</div>
+		[(#CONFIG{wsps_html5/menu_barre_nav}|?{
+			#SET{menu,#CONFIG{wsps_html5/menu_barre_nav}}
+			,
+			#SET{menu,#CONFIG{wsps_html5/menu_secteurs}}
+		})]
+		<nav class="c-mega-menu c-pull-right c-mega-menu-dark c-mega-menu-dark-mobile c-fonts-uppercase c-fonts-bold">
+			<ul class="nav navbar-nav c-theme-nav">
+				<INCLURE{fond=barre_nav/#GET{menu},env}/>
+				<li class="c-search-toggler-wrapper">
+					<a  href="#" class="c-btn-icon c-search-toggler"><i class="fa fa-search"></i></a>
+				</li>
+				[(#REM) voir inclure/panier.html
+				<li class="c-cart-toggler-wrapper">
+					<a  href="#" class="c-btn-icon c-cart-toggler"><i class="icon-handbag c-cart-icon"></i> <span class="c-cart-number c-theme-bg">2</span></a>
+				</li>]
+				<li>
+					<a href="#URL_PAGE{login}"  data-toggle="modal" data-target="#myModal" class="c-btn-border-opacity-04 c-btn btn-no-focus c-btn-header btn btn-sm c-btn-border-1x c-btn-dark c-btn-circle c-btn-uppercase c-btn-sbold"><i class="icon-user"></i> Sign In</a>
+				</li>
+				[(#REM)
+					<li class="c-quick-sidebar-toggler-wrapper">
+						<a href="#" class="c-quick-sidebar-toggler">
+							<span class="c-line"></span>
+							<span class="c-line"></span>
+							<span class="c-line"></span>
+						</a>
+					</li>
+				]
+			</ul>
+		</nav>
+	</div>
 <!-- END: CART MENU --><!-- END: LAYOUT/HEADERS/QUICK-CART -->
 </div>
