--- a/inclure/nav.html
+++ b/inclure/nav.html
@@ -43,7 +43,24 @@
 					<a  href="#" class="c-btn-icon c-cart-toggler"><i class="icon-handbag c-cart-icon"></i> <span class="c-cart-number c-theme-bg">2</span></a>
 				</li>]
 				<li>
-					<a href="#URL_PAGE{login}"  data-toggle="modal" data-target="#myModal" class="c-btn-border-opacity-04 c-btn btn-no-focus c-btn-header btn btn-sm c-btn-border-1x c-btn-dark c-btn-circle c-btn-uppercase c-btn-sbold"><i class="icon-user"></i> Sign In</a>
+				[(#SESSION{id_auteur}|oui)
+					<a
+						href="#URL_LOGOUT"
+						rel="nofollow"
+						class='login_modal c-btn-border-opacity-04 c-btn btn-no-focus c-btn-header btn btn-sm c-btn-border-1x c-btn-dark c-btn-circle c-btn-uppercase c-btn-sbold'>
+						<i class="icon-user"></i> <:icone_deconnecter:>
+					</a>
+				]
+
+				[(#SESSION{id_auteur}|non)
+					<a
+						href="[(#URL_PAGE{login}|parametre_url{url,#SELF|parametre_url{url,''}})]"
+						rel="nofollow"
+						class='login_modal c-btn-border-opacity-04 c-btn btn-no-focus c-btn-header btn btn-sm c-btn-border-1x c-btn-dark c-btn-circle c-btn-uppercase c-btn-sbold'>
+						<i class="icon-user"></i> <:lien_connecter:>
+					</a>
+				]
+
 				</li>
 				[(#REM)
 					<li class="c-quick-sidebar-toggler-wrapper">
