--- a/barre_nav/menu_secteurs_ml.html
+++ b/barre_nav/menu_secteurs_ml.html
@@ -3,5 +3,5 @@
 		<li class="[(#EXPOSE|oui)c-active ]c-menu-type-classic">
 			<a class="c-link" href="#URL_RUBRIQUE">[(#TITRE|couper{80})]</a>
 		</li>
-		</BOUCLE_enfants>>
+		</BOUCLE_enfants>
 </BOUCLE_nav>
