--- a/breadcrumb/404.html
+++ b/breadcrumb/404.html
@@ -1,5 +1,6 @@
 [(#REM) Fil d'Ariane ]
-<ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
-	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a> <span class="divider"> &gt; </span></li>
-	<li class="active"><span><:pass_erreur:> 404</span></li>
+<ul class="#ENV{class,c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular}">
+	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a></li>
+	<li>/</li>
+	<li class="c-state_active"><span><:pass_erreur:> 404</span></li>
 </ul>
