--- a/breadcrumb/dist.html
+++ b/breadcrumb/dist.html
@@ -1,4 +1,4 @@
-<ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
+<ul class="#ENV{class,c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular}">
 	#SET{objet,''}#SET{id_objet,''}
 
 	[(#ENV{id_rubrique}|oui)#SET{objet,rubrique}#SET{id_objet,#ENV{id_rubrique}}]
@@ -12,6 +12,7 @@
 	[(#GET{objet}|oui)
 	#INCLURE{fond=breadcrumb/inc-objet,id_objet=#GET{id_objet},objet=#GET{objet}}
 	][(#GET{objet}|non)
-	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a><span class="divider"> &gt; </span></li>
+	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a></li>
+	<li>/</li>
 	]
 </ul>
