--- a/breadcrumb/forum.html
+++ b/breadcrumb/forum.html
@@ -1,5 +1,5 @@
 [(#REM) Fil d'Ariane ]
-<ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
+<ul class="#ENV{class,c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular}">
 	#SET{objet,''}#SET{id_objet,''}
 
 	[(#ENV{id_rubrique}|oui)#SET{objet,rubrique}#SET{id_objet,#ENV{id_rubrique}}]
@@ -11,11 +11,13 @@
 	[(#GET{objet}|oui)
 	#INCLURE{fond=breadcrumb/inc-objet,id_objet=#GET{id_objet},objet=#GET{objet},expose=''}
 	][(#GET{objet}|non)
-	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a><span class="divider"> &gt; </span></li>
+	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a></li>
+	<li>/</li>
 	]
 	<BOUCLE_for(FORUMS){id_forum}>
-	<li><a href="#URL_FORUM">[(#TITRE|couper{80})]</a><span class="divider"> &gt; </span></li>
+	<li><a href="#URL_FORUM">[(#TITRE|couper{80})]</a></li>
+	<li>/</li>
 	</BOUCLE_for>
 
-	<li class="active"><span><:poster_message:></span></li>
+	<li class="c-state_active"><span><:poster_message:></span></li>
 </ul>
