--- a/breadcrumb/login.html
+++ b/breadcrumb/login.html
@@ -5,7 +5,8 @@
 [(#ENV{url}|match{^#EVAL{_DIR_RESTREINT_ABS}}|?{#SET{prive,' '}})]
 
 [(#REM) Fil d'Ariane ]
-<ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
-	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a><span class="divider"> &gt; </span></li>
+<ul class="#ENV{class,c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular}page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
+	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a></li>
+	<li>/</li>
 	<li class="active"><span>[(#GET{prive}|?{<:login_acces_prive:>,<:lien_connecter:>})]</span></li>
 </ul>
