--- a/breadcrumb/plan.html
+++ b/breadcrumb/plan.html
@@ -1,4 +1,5 @@
-<ul class="c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular">
-	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a><span class="divider"> &gt; </span></li>
-	<li class="active"><span><:plan_site:></span></li>
+<ul class="#ENV{class,c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular}">
+	<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a></li>
+	<li>/</li>
+	<li class="c-state_active"><span><:plan_site:></span></li>
 </ul>
