--- a/breadcrumb/rubrique.html
+++ b/breadcrumb/rubrique.html
@@ -1,12 +1,16 @@
 <BOUCLE_rub(RUBRIQUES){id_rubrique}{tout}>
 <B_ariane>
     [(#REM) Fil d'Ariane ]
-    <ul class="breadcrumb">
-            [(#ID_PARENT|!={0}|oui)<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a><span class="divider"> &gt; </span></li>]
+    <ul class="#ENV{class,c-page-breadcrumbs c-theme-nav c-pull-right c-fonts-regular}">
+            [(#ID_PARENT|!={0}|oui)<li><a href="#URL_SITE_SPIP/"><:accueil_site:></a></li>
+            <li>/</li>
+            ]
             <BOUCLE_ariane(HIERARCHIE){id_rubrique}{tout}>
-                [(#ID_PARENT|!={0}|oui|et{#ENV{id_rubrique}|!=={#ID_RUBRIQUE}|oui})<li><a href="#URL_RUBRIQUE">[(#TITRE|couper{80})]</a><span class="divider"> &gt; </span></li>]
+                [(#ID_PARENT|!={0}|oui|et{#ENV{id_rubrique}|!=={#ID_RUBRIQUE}|oui})<li><a href="#URL_RUBRIQUE">[(#TITRE|couper{80})]</a></li>
+                <li>/</li>
+                ]
             </BOUCLE_ariane>
-            [(#ID_PARENT|!={0}|?{[<li class="on">(#TITRE|couper{80})]</li>,<li class="on"><:accueil_site:></li>})]
+            [(#ID_PARENT|!={0}|?{[<li class="c-state_active">(#TITRE|couper{80})]</li>,<li class="c-state_active"><:accueil_site:></li>})]
     </ul><!--.arbo-->
-</B_ariane>    
+</B_ariane>
 </BOUCLE_rub>
