--- a/body.html
+++ b/body.html
@@ -1,3 +1,4 @@
+#SET{titre_breadcrumb,#ENV{titre_breadcrumb},oui}
 <body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-topbar c-layout-header-topbar-collapse">
 	<!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
 	<!-- BEGIN: HEADER -->
@@ -11,20 +12,32 @@
 	</header>
 
 	<div class="c-layout-page">
-	<INCLURE{fond=content/#ENV{type-page},env} />
+<!-- BEGIN: LAYOUT/BREADCRUMBS/BREADCRUMBS-2 -->
+<div class="c-layout-breadcrumbs-1 c-subtitle c-fonts-uppercase c-fonts-bold c-bordered c-bordered-both">
+	<div class="container">
+		[(#GET{titre_breadcrumb}|oui)
+		<div class="c-page-title c-pull-left">
+			<h1 class="#EDIT{#ENV{class_crayon,titre}} c-font-uppercase c-font-sbold">#TITRE</h1>
+			[<h2>(#SOUSTITRE)</h2>]
+		</div>]
+		<INCLURE{fond=breadcrumb/#ENV{type-page},env} />
+	</div>
+</div>
+<div class="container">
+	<div class="c-layout-sidebar-menu c-theme ">
+		<INCLURE{fond=aside/#ENV{type-page},env} />
+		<INCLURE{fond=extra/#ENV{type-page},env} />
+	</div>
+	<div class="c-layout-sidebar-content ">
+		<INCLURE{fond=content/#ENV{type-page},titre_breadcrumb=#GET{titre_breadcrumb},env} />
+	</div>
+</div>
+
+
 
 
 		<div class="container">
 
-
-
-			<div class="row">
-
-				<div class="aside secondary col-sm-3 offset1" id="aside">
-					<INCLURE{fond=aside/#ENV{type-page},env} />
-					<INCLURE{fond=extra/#ENV{type-page},env} />
-				</div>
-			</div>
 
 			<div class="footer" id="footer">
 				<INCLURE{fond=footer/#ENV{type-page},env} />
