--- a/body.html
+++ b/body.html
@@ -1,4 +1,5 @@
-#SET{titre_breadcrumb,#ENV{titre_breadcrumb},oui}
+#SET{titre_breadcrumb,#ENV{titre_breadcrumb},oui}#SET{multilingue,#ENV{miltilinguue,''}
+[(#PLUGIN{wsp_ml}|oui)#SET{multilingue,oui}]
 <body class="c-layout-header-fixed c-layout-header-mobile-fixed c-layout-header-topbar c-layout-header-topbar-collapse">
 	<!-- BEGIN: LAYOUT/HEADERS/HEADER-1 -->
 	<!-- BEGIN: HEADER -->
@@ -12,38 +13,34 @@
 	</header>
 
 	<div class="c-layout-page">
-<!-- BEGIN: LAYOUT/BREADCRUMBS/BREADCRUMBS-2 -->
-<div class="c-layout-breadcrumbs-1 c-subtitle c-fonts-uppercase c-fonts-bold c-bordered c-bordered-both">
-	<div class="container">
-		[(#GET{titre_breadcrumb}|oui)
-		<div class="c-page-title c-pull-left">
-			<h1 class="#EDIT{#ENV{class_crayon,titre}} c-font-uppercase c-font-sbold">#TITRE</h1>
-			[<h2>(#SOUSTITRE)</h2>]
-		</div>]
-		<INCLURE{fond=breadcrumb/#ENV{type-page},env} />
-	</div>
-</div>
-<div class="container">
-	<div class="c-layout-sidebar-menu c-theme ">
-		<INCLURE{fond=aside/#ENV{type-page},env} />
-		<INCLURE{fond=extra/#ENV{type-page},env} />
-	</div>
-	<div class="c-layout-sidebar-content ">
-		<INCLURE{fond=content/#ENV{type-page},titre_breadcrumb=#GET{titre_breadcrumb},env} />
-	</div>
-</div>
-
-
-
-
+		<!-- BEGIN: LAYOUT/BREADCRUMBS/BREADCRUMBS-2 -->
+		<div class="c-layout-breadcrumbs-1 c-subtitle c-fonts-uppercase c-fonts-bold c-bordered c-bordered-both">
+			<div class="container">
+				[(#GET{titre_breadcrumb}|oui)
+				<div class="c-page-title c-pull-left">
+					<h1 class="#EDIT{#ENV{class_crayon,titre}} c-font-uppercase c-font-sbold">#TITRE</h1>
+					[<h2>(#SOUSTITRE)</h2>]
+				</div>]
+				<INCLURE{fond=breadcrumb/#ENV{type-page},env} />
+			</div>
+		</div>
 		<div class="container">
-
-
-			<div class="footer" id="footer">
-				<INCLURE{fond=footer/#ENV{type-page},env} />
+			<div class="c-layout-sidebar-menu c-theme ">
+				<INCLURE{fond=aside/#ENV{type-page},multilingue=#GET{multilingue},env} />
+				<INCLURE{fond=extra/#ENV{type-page},env} />
+			</div>
+			<div class="c-layout-sidebar-content ">
+				<INCLURE{fond=content/#ENV{type-page},titre_breadcrumb=#GET{titre_breadcrumb},env} />
 			</div>
 		</div>
 	</div>
+	<a name="footer"></a>
+	<footer class="c-layout-footer c-layout-footer-3 c-bg-dark">
+		<INCLURE{fond=footer/#ENV{type-page},env} />
+	</div>
+	<div class="c-layout-go2top">
+	<i class="icon-arrow-up"></i>
+</div><!-- END: LAYOUT/FOOTERS/GO2TOP -->
 
 	[(#REM)<!-- BEGIN: CART MENU -->
 		<INCLURE{fond=inclure/panier,env} />
