définir le color theme via constante

--- a/inclure/head.html
+++ b/inclure/head.html
@@ -42,6 +42,9 @@ var error_on_ajaxform='<:erreur_technique_ajaxform|html2unicode|addslashes|unico
 [<link rel="stylesheet" href="(#CSS{css/components.css})" type="text/css" />]
 [<link rel="stylesheet" href="(#CSS{css/default.css})" type="text/css" />]
 
+<!-- Color Theme -->
+[<link href="(#CSS{assets/base/css/themes/#EVAL{JANGO_THEME_COLOR}.css})" rel="stylesheet" id="style_theme" type="text/css"/>]
+
 	<!-- END THEME STYLES -->
 
 <!-- Spip styles -->
