--- a/rubrique.html
+++ b/rubrique.html
@@ -11,10 +11,10 @@
 	})]
 	<INCLURE{fond=structure,
 		env,
+		titre=#TITRE,
 		id_secteur=#ID_SECTEUR,
 		type-page=rubrique,
 		id_trad,
 		composition=#COMPOSITION,
-		home=#GET{home}},
-		titre />
+		home=#GET{home}} />
 </BOUCLE_principale_rubrique>
