--- a/aside/article.html
+++ b/aside/article.html
@@ -1,6 +1,7 @@
-[(#REM) Menu de navigation par rubriques ]
-<INCLURE{fond=inclure/navsub}{id_rubrique}>
-
-
-
-
+[(#REM) Menu de navigation par rubriques]
+[(#ENV{multilingue}|?{
+	#SET{ml,_ml}
+	,
+	#SET{ml,''}
+})]
+<INCLURE{fond=inclure/navsub#GET{ml}}{id_rubrique}>
