--- a/inclure/brand.html
+++ b/inclure/brand.html
@@ -1,5 +1,5 @@
 <!-- BEGIN: BRAND -->
-<a href="index.html" class="c-logo">
+<a href="#URL_SITE_SPIP" class="c-logo">
 #SET{logo,#LOGO_SITE|image_reduire{*,21}|extraire_attribut{src}}
 	<img src="#GET{logo}" alt="#NOM_SITE_SPIP" class="c-desktop-logo">
 	<img src="#GET{logo}" alt="#NOM_SITE_SPIP" class="c-desktop-logo-inverse">
