--- a/body.html
+++ b/body.html
@@ -4,7 +4,7 @@
 	<!-- BEGIN: HEADER -->
 	<header class="[(#GET{brand_topbar}|?{c-layout-header c-layout-header-6 c-navbar-fluid,c-layout-header c-layout-header-4 c-layout-header-default-mobile})]" data-minimize-offset="80">
 		[<div class="c-topbar[ c-topbar-light c-solid-bg(#GET{brand_topbar}|non)]">
-			(#INCLURE{fond=inclure/topbar_light,brand_topbar=#GET{brand_topbar}})
+			(#INCLURE{fond=inclure/topbar_light,brand_topbar=#GET{brand_topbar},env})
 		</div>]
 		[<div class="c-navbar">
 			(#INCLURE{fond=inclure/nav,brand_topbar=#GET{brand_topbar},env})
