--- a/inclure/inline_nav.html
+++ b/inclure/inline_nav.html
@@ -1,5 +1,8 @@
 <!-- BEGIN: INLINE NAV -->
 #SET{divider,<li class="c-divider"> </li>}
+[(#CONFIG{multilingue/menu_langue}|oui)
+	#SET{select,_select}
+]
 [(#ENV{brand_topbar}|non)#SET{divider,<li class="c-divider">|</li>
 <nav class="c-top-menu c-pull-left">>}
 	<INCLURE{fond=inclure/social_icons} />
@@ -17,8 +20,7 @@
 	</ul>
 	<ul class="c-ext c-theme-ul">
 		[<li class="c-lang dropdown c-last">
-			<a href="#">[(#ENV{lang})]</a>
-			(#INCLURE{fond=inclure/menu_lang,env})
+			(#INCLURE{fond=inclure/menu_langues[(#GET{select})],env})
 		</li>]
 		<li class="c-search hide">
 			<!-- BEGIN: QUICK SEARCH -->
