--- a/inclure/quick_sidebar.html
+++ b/inclure/quick_sidebar.html
@@ -6,6 +6,10 @@
 	</div>
 	<div class="c-content">
 		<div class="c-section">
+			<INCLURE{fond=extra/#ENV{type-page},env} />
+		</div>
+		[(#REM)
+		<div class="c-section">
 			<h3>JANGO DEMOS</h3>
 			<div class="c-settings c-demos c-bs-grid-reset-space">
 				<div class="row">
@@ -104,6 +108,6 @@
 				<a href="http://www.themehats.com/themes/jango/" class="c-setting_font-style btn btn-sm c-btn-square c-btn-border-1x c-btn-white c-btn-sbold c-btn-uppercase active">LTR</a>
 				<a href="http://www.themehats.com/themes/jango/rtl/" class="c-setting_font-style btn btn-sm c-btn-square c-btn-border-1x c-btn-white c-btn-sbold c-btn-uppercase ">RTL</a>
 			</div>
-		</div>
+		</div>]
 	</div>
 </nav>
