--- a/content/article.html
+++ b/content/article.html
@@ -1,10 +1,10 @@
 <BOUCLE_content(ARTICLES){id_article}>
 <article>
 	[(#ENV{titre_breadcrumb}|non)
+
 	<header class="cartouche">
-		[(#LOGO_ARTICLE|image_reduire{200,200})] [
-		<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>
-		]
+		[(#LOGO_ARTICLEimage_reduire{200,200})]
+		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
 		<h1 class="c-title c-font-bold c-font-uppercase">
 			<span class="#EDIT{titre}">#TITRE</span>[ <small
 				class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</small>]
@@ -25,34 +25,27 @@
 	[(#REM) Boite à outils]
 	[(#INCLURE{fond=inclure/outils,env,titre,introduction=[(#INTRODUCTION|textebrut)],url=#URL_ARTICLE})]
 	<div class="main">
-		[
-		<div class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</div>
-		] [
-		<div class="#EDIT{texte} texte surlignable">(#TEXTE|image_reduire{500,0})</div>
-		] [
-		<p class="#EDIT{hyperlien} hyperlien">
+		[<div class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</div>]
+		[<div class="#EDIT{texte} texte surlignable">(#TEXTE|image_reduire{500,0})</div>]
+		[<p class="#EDIT{hyperlien} hyperlien">
 			<:voir_en_ligne:> : <a href="(#URL_SITE)"
 				class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a>
-		</p>
-		]
+		</p>]
 	</div>
 
 	<footer>
-		[
-		<div class="#EDIT{ps} ps surlignable">
+		[<div class="#EDIT{ps} ps surlignable">
 			<h2>
 				<:info_ps:>
 			</h2>
 			(#PS|image_reduire{500,0})
-		</div>
-		] [
-		<div class="notes">
+		</div>]
+		[<div class="notes">
 			<h2>
 				<:info_notes:>
 			</h2>
 			(#NOTES)
-		</div>
-		]
+		</div>]
 	</footer>
 
 	<aside>
