menu toggle work around

--- a/inclure/head.html
+++ b/inclure/head.html
@@ -93,6 +93,7 @@ var error_on_ajaxform='<:erreur_technique_ajaxform|html2unicode|addslashes|unico
 ]
 #INSERT_HEAD
 [<script type="text/javascript" src="(#CHEMIN{js/bootstrap-collapse.js})"></script>]
+[<script src="(#CHEMIN{bootstrap/js/scrollspy.js})"></script>]
 <!--[if lt IE 9]>
 [<script src="(#CHEMIN{js/html5.js})"></script>]
 [<script src="(#CHEMIN{js/respond.min.js})"></script>]
