--- a/inclure/scripts.html
+++ b/inclure/scripts.html
@@ -8,6 +8,7 @@
 [<script src="(#CHEMIN{assets/plugins/bootstrap/js/bootstrap.min.js})" type="text/javascript" ></script>]
 [<script src="(#CHEMIN{assets/plugins/jquery.easing.min.js})" type="text/javascript" ></script>]
 [<script src="(#CHEMIN{assets/plugins/reveal-animate/wow.js})" type="text/javascript" ></script>]
+[<script src="(#CHEMIN{assets/plugins/reveal-animate/reveal-animate.js})" type="text/javascript" ></script>]
 
 <!-- END: CORE PLUGINS -->
 [(#REM)
@@ -24,17 +25,16 @@
 
 <!-- BEGIN: THEME SCRIPTS -->
 [<script src="(#CHEMIN{scripts/components.js})" type="text/javascript"></script>]
-[<script src="(#CHEMIN{scripts/components-shop.js})" type="text/javascript"></script>]
+[(#REM)[<script src="(#CHEMIN{scripts/components-shop.js})" type="text/javascript"></script>]]
 [<script src="(#CHEMIN{scripts/app.js})" type="text/javascript"></script>]
 <script>
 $(document).ready(function() {
 	App.init(); // init core
 });
 
-$("#myModal").on("show.bs.modal", function(e) {
-	console.log('ok');
-		var link = $(e.relatedTarget);
-		$(this).load(link.attr("href"));
+$('.c-content-toggler').click(function(){
+	var target = $(this).attr('data-target');
+	$(target).toggle();
 });
 </script>
 <!-- END: THEME SCRIPTS -->
