--- a/inclure/head.html
+++ b/inclure/head.html
@@ -18,14 +18,19 @@ var error_on_ajaxform='<:erreur_technique_ajaxform|html2unicode|addslashes|unico
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&amp;subset=all' rel='stylesheet' type='text/css'>
 
+[<link rel="stylesheet" href="(#CSS{css/font.css})" type="text/css" />]
+[<link rel="stylesheet" href="(#CSS{css/bootstrap.css})" type="text/css" />]
+[<link rel="stylesheet" href="(#CSS{css/responsive.css})" type="text/css" />]
+[<link rel="stylesheet" href="(#CSS{css/box.css})" type="text/css" />]
+[<link rel="stylesheet" href="(#CSS{css/box_skins.css})" type="text/css" />]
+[<link rel="stylesheet" href="(#CSS{css/bootstrap4.css})" type="text/css" />]
+
 [<link rel="stylesheet" href="(#CSS{assets/plugins/socicon/socicon.css})" type="text/css" />]
 [<link rel="stylesheet" href="(#CSS{assets/plugins/bootstrap-social/bootstrap-social.css})" type="text/css" />]
 [<link rel="stylesheet" href="(#CSS{assets/plugins/font-awesome/css/font-awesome.min.css})" type="text/css" />]
 [<link rel="stylesheet" href="(#CSS{assets/plugins/simple-line-icons/simple-line-icons.min.css})" type="text/css" />]
 [<link rel="stylesheet" href="(#CSS{assets/plugins/animate/animate.min.css})" type="text/css" />]
 
-<!-- [<link rel="stylesheet" href="(#CSS{css/font.css})" type="text/css" />] -->
-[<link rel="stylesheet" href="(#CSS{css/bootstrap.css})" type="text/css" />]
 	<!-- END GLOBAL MANDATORY STYLES -->
 
 
