--- a/inclure/nav.html
+++ b/inclure/nav.html
@@ -41,7 +41,7 @@
 				]
 
 				</li>
-				[(#REM)
+				[(#ENV{quick_sidebar}|oui)
 					<li class="c-quick-sidebar-toggler-wrapper">
 						<a href="#" class="c-quick-sidebar-toggler">
 							<span class="c-line"></span>
