--- a/body.html
+++ b/body.html
@@ -25,9 +25,9 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="c-layout-sidebar-menu c-theme ">
-				<INCLURE{fond=aside/#ENV{type-page},multilingue=#GET{multilingue},env} />
-			</div>
+			[<div class="c-layout-sidebar-menu c-theme ">
+				(#INCLURE{fond=aside/#ENV{type-page},multilingue=#GET{multilingue},env})
+			</div>]
 			<div class="c-layout-sidebar-content ">
 				<INCLURE{fond=content/#ENV{type-page},titre_breadcrumb=#GET{titre_breadcrumb},env} />
 			</div>
