--- a/modeles/articles_logo_owl.html
+++ b/modeles/articles_logo_owl.html
@@ -37,17 +37,17 @@ Insertion du modele <articleX|owl>
 	}
 </style>
 [(#REM) <!-- Diaporama -->]
-<div id="#ENV{id-carousel,demo}" class="owl-carousel owl-theme">
-	<BOUCLE_articles(ARTICLES){id_article?}{id_rubrique?}{id_mot?}>#SET{logo,#LOGO_ARTICLE|extraire_attribut{src}} #GET{logo}
+<div id="#ENV{id-carousel,demo}" class="owl-carousel owl-theme[ (#ENV{items}|=={1}|oui)owl-single]">
+	<BOUCLE_articles(ARTICLES){id_article?}{id_rubrique?}{id_mot?}>#SET{logo,#LOGO_ARTICLE|extraire_attribut{src}}
 	<div class="owl-slide" data-hash="#ENV{id-carousel,demo}#ID_ARTICLE">
 		[(#ENV{caption,oui}|=={oui}|oui)
 		<div class="caption[ (#ENV{caption_css})]">[
 			<h3 class="title">(#TITRE)</h3>][
-			<p class="hidden-phone">(#DESCRIPTIF|textebrut)</p>]</div>]
+			<p class="hidden-phone">(#INTRODUCTION|textebrut)</p>]</div>]
 			<a href="#GET{logo}" class="js-colorbox"[ rel="diaporama(#ENV{id-carousel,demo})"]>
 				<img [(#ENV{lazyLoad}|=={true}|oui)class="owl-lazy" data-]src="[(#GET{logo}
 					|image_passe_partout{#ENV{width,1440},#ENV{height,599}}
-					|image_recadre{#ENV{width,650},#ENV{height,450}}
+					|image_recadre{#ENV{width,1440},#ENV{height,599}}
 					|extraire_attribut{src})]" alt="[(#TITRE|textebrut)]">
 			</a>
 	</div>
