--- a/modeles/articles_logo_owl.html
+++ b/modeles/articles_logo_owl.html
@@ -57,7 +57,7 @@ Insertion du modele <articleX|owl>
 <script type="text/javascript">
 jQuery(function($){
 	$("[#(#ENV{id-carousel,demo})]").owlCarousel({
-			loop:true,[
+			[loop: (#ENV{loop, true}),][
 			items: (#ENV{items, 1}),][
 			margin:(#ENV{margin}),][
 			dots:(#ENV{dots, true}),][
@@ -66,7 +66,8 @@ jQuery(function($){
 			autoplayHoverPause: (#ENV{autoplayHoverPause}),][
 			lazyLoad: (#ENV{lazyLoad}),][
 			autoplayTimeout: (#ENV{autoplayTimeout}),][
-			autoHeight: (#ENV{autoHeight}),]
+			autoHeight: (#ENV{autoHeight}),][
+			center: (#ENV{center}),]
 			responsive:false,
 			URLhashListener:true,
 			startPosition: 'URLHash',
