--- a/modeles/selection_owl.html
+++ b/modeles/selection_owl.html
@@ -15,43 +15,36 @@ Insertion du modele <articleX|owl>
 @param : lazyLoad : true (false par défaut) : ne charge que les images visibles pour optimiser le chargement.
 
 -->]
+
+
 <style>
-	[#(#ENV{id-carousel,demo})] .owl-slide > .caption{
-		z-index: 100;
-		position: absolute;
-		left:55%;
-		width: 40%;
-		bottom:5%;
-	}
-	[#(#ENV{id-carousel,demo})] .owl-slide > .caption > .title{
-		background: #000;
-		color : #FFF;
-		padding: 5px;
-		width: auto;
-	}
-	[#(#ENV{id-carousel,demo})] .owl-slide > .caption > p {
-		background-color: rgba(88, 88, 88, 0.75) ;
-		/*float: right;*/
-		color: #FFF;
-		padding: 5px;
+[#(#ENV{id-carousel,demo})] .owl-slide > .caption{
+	margin-top:10px;
 	}
 </style>
+
+
 [(#REM) <!-- Diaporama -->]
 <div id="#ENV{id-carousel,demo}" class="owl-carousel owl-theme[ (#ENV{items}|=={1}|oui)owl-single]">
-	<BOUCLE_selections(SELECTIONS){identifiant=#ENV{identifiant}}>
-		<BOUCLE_actualites_contenus(SELECTIONS_CONTENUS){id_selection}{0,3}{par rang}>
+	<BOUCLE_selections(SELECTIONS){identifiant?}{id_rubrique?}>
+		<BOUCLE_actualites_contenus(SELECTIONS_CONTENUS){id_selection?}{par rang}>
 		#SET{logo,#LOGO_SELECTIONS_CONTENU|extraire_attribut{src}}
-		<div class="owl-slide" data-hash="#ENV{id-carousel,demo}#ID_ARTICLE">
-			[(#ENV{caption,oui}|=={oui}|oui)
-			<div class="caption[ (#ENV{caption_css})]">[
-				<h3 class="title">(#TITRE)</h3>][
-				<p class="hidden-phone">(#INTRODUCTION|textebrut)</p>]</div>]
-				<a href="#GET{logo}" class="js-colorbox"[ rel="diaporama(#ENV{id-carousel,demo})"]>
+		<div class="owl-slide" data-hash="#ENV{id-carousel,demo}#ID_SELECTIONS_CONTENU">
+			<a href="#URL">
 					<img [(#ENV{lazyLoad}|=={true}|oui)class="owl-lazy" data-]src="[(#GET{logo}
 						|image_passe_partout{#ENV{width,1440},#ENV{height,599}}
 						|image_recadre{#ENV{width,1440},#ENV{height,599}}
 						|extraire_attribut{src})]" alt="[(#TITRE|textebrut)]">
 				</a>
+
+			<div class="caption[ (#ENV{caption_css})]">
+				[<p class="hidden-phone">(#DESCRIPTIF|couper{150,'…'})</p>]
+				<p>
+					<a class="btn c-theme-btn c-btn-uppercase c-btn-bold c-btn-border-1x" href="#URL_ARTICLE">
+						<:cnde:lire_suite:> <span class="glyphicon glyphicon-arrow-right"> </span>
+					</a>
+				</p>
+			</div>
 		</div>
 		</BOUCLE_actualites_contenus>
 	</BOUCLE_selections>
@@ -60,7 +53,7 @@ Insertion du modele <articleX|owl>
 <script type="text/javascript">
 jQuery(function($){
 	$("[#(#ENV{id-carousel,demo})]").owlCarousel({
-			loop:true,[
+			[loop: (#ENV{loop, true}),][
 			items: (#ENV{items, 1}),][
 			margin:(#ENV{margin}),][
 			dots:(#ENV{dots, true}),][
@@ -69,7 +62,8 @@ jQuery(function($){
 			autoplayHoverPause: (#ENV{autoplayHoverPause}),][
 			lazyLoad: (#ENV{lazyLoad}),][
 			autoplayTimeout: (#ENV{autoplayTimeout}),][
-			autoHeight: (#ENV{autoHeight}),]
+			autoHeight: (#ENV{autoHeight}),][
+			center: (#ENV{center}),]
 			responsive:false,
 			URLhashListener:true,
 			startPosition: 'URLHash',
