--- a/content/article.html
+++ b/content/article.html
@@ -3,7 +3,7 @@
 	[(#ENV{titre_breadcrumb}|non)
 
 	<header class="cartouche">
-		[(#LOGO_ARTICLEimage_reduire{200,200})]
+		[(#LOGO_ARTICLE|image_reduire{200,200})]
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
 		<h1 class="c-title c-font-bold c-font-uppercase">
 			<span class="#EDIT{titre}">#TITRE</span>[ <small
