enlever id_trad

--- a/content/rubrique-default.html
+++ b/content/rubrique-default.html
@@ -1,5 +1,5 @@
 [(#REM) Affiche un plan de la rubrique]
-[(#INCLURE{fond=contenu/rubrique-articles_rubrique,id_rubrique,env,id_trad,id_parent,imprimer}|sinon{
+[(#INCLURE{fond=contenu/rubrique-articles_rubrique,id_rubrique,env,id_parent,imprimer}|sinon{
 	[(#INCLURE{fond=contenu/rubrique-sous_rubriques_tous,id_rubrique,env,id_parent,imprimer})]
 	})]
 
