--- a/breadcrumb/auteur.html
+++ b/breadcrumb/auteur.html
@@ -5,7 +5,6 @@
 	<li>/</li>
 	<li><span><:info_auteurs:></span></li>
 	<li>/</li>
-	[<li class="c-state_active"></li>
-	<li>/</li>]
+	[<li class="c-state_active">(#NOM|couper{80})</li>]
 </ul>
 </BOUCLE_content>
