passer l'id_trad

--- a/article.html
+++ b/article.html
@@ -1,5 +1,6 @@
 <BOUCLE_principale_article(ARTICLES){id_article}>
 <INCLURE{fond=structure,
+	id_trad,
 	env,
 	id_rubrique=#ENV{id_rubrique,#ID_RUBRIQUE},
 	id_secteur=#ID_SECTEUR,
